feat: #17 auth controller swagger docs
